# tokmon

./: CLAUDE.md  Cargo.toml  README.md  prices.json
Formula/: tokmon.rb
src/: main.rs  pricing.rs  proxy.rs  report.rs  storage.rs  tui.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
